Exercise 1.7 e) - Fourth Part - END
The whole code is commented and finished, only needed to change the name of the file to submit

--- a/Laboratory 1 Image processing with skimage-20201001/p1_2020_2021.ipynb
+++ b/Laboratory 1 Image processing with skimage-20201001/p1_2020_2021.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,17 +1413,17 @@
       "Data type: uint8\n",
       "Pixel 0: [  0   0   0 255]\n",
       "\n",
-      "--- my_texture.png data ---\n",
-      "Size: 2816352\n",
-      "Shape: (924, 1016, 3)\n",
-      "Data type: uint8\n",
-      "Pixel 0: [224 223 227]\n",
-      "\n",
       "--- texture2.png data ---\n",
       "Size: 3261060\n",
       "Shape: (1188, 915, 3)\n",
       "Data type: uint8\n",
       "Pixel 0: [242  99  87]\n",
+      "\n",
+      "--- my_texture.png data ---\n",
+      "Size: 2816352\n",
+      "Shape: (924, 1016, 3)\n",
+      "Data type: uint8\n",
+      "Pixel 0: [224 223 227]\n",
       "\n",
       "--- coat_model data ---\n",
       "Size: 4348080\n",
@@ -1441,13 +1441,19 @@
       "Size: 4348080\n",
       "Shape: (1188, 915, 4)\n",
       "Data type: uint8\n",
+      "Pixel 0: [226 226 226 255]\n",
+      "\n",
+      "--- my_texture_coat_model data ---\n",
+      "Size: 4348080\n",
+      "Shape: (1188, 915, 4)\n",
+      "Data type: uint8\n",
       "Pixel 0: [226 226 226 255]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x241a447d808>"
+       "<matplotlib.image.AxesImage at 0x2a83bb05108>"
       ]
      },
      "execution_count": 7,
@@ -1481,69 +1487,106 @@
    ],
    "source": [
     "#Your solution\n",
-    "from skimage import img_as_uint\n",
-    "from skimage.transform import rotate, resize\n",
-    "model_img = io.imread('images/images/model.png')\n",
-    "coat_img = io.imread('images/images/coat.png')\n",
-    "red_texture_img = io.imread('images/images/texture2.png')\n",
-    "my_texture_img = io.imread('images/images/my_texture.png')\n",
+    "from skimage import img_as_uint # Useful when need to convert the datatype of the image\n",
+    "from skimage.transform import resize # Useful when need to resize an image\n",
+    "model_img = io.imread('images/images/model.png') # Importing model image\n",
+    "coat_img = io.imread('images/images/coat.png') # Importing coat image\n",
+    "red_texture_img = io.imread('images/images/texture2.png') # Importing red texture image\n",
+    "my_texture_img = io.imread('images/images/my_texture.png') # Importing my downloaded texture image\n",
+    "                                                           # (I saved it at images/images folder)\n",
     "\n",
-    "print('--- model.png data ---')\n",
+    "# Data info about the model image\n",
+    "print('--- model.png data ---') \n",
     "print('Size:', model_img.size)\n",
     "print('Shape:', model_img.shape)\n",
     "print('Data type:', model_img.dtype)\n",
     "print('Pixel 0:', model_img[0, 0])\n",
     "\n",
+    "# Data info about the coat image\n",
     "print('\\n--- coat.png data ---')\n",
     "print('Size:', coat_img.size)\n",
     "print('Shape:', coat_img.shape)\n",
     "print('Data type:', coat_img.dtype)\n",
     "print('Pixel 0:', coat_img[0, 0])\n",
     "\n",
-    "print('\\n--- my_texture.png data ---')\n",
-    "print('Size:', my_texture_img.size)\n",
-    "print('Shape:', my_texture_img.shape)\n",
-    "print('Data type:', my_texture_img.dtype)\n",
-    "print('Pixel 0:', my_texture_img[0, 0])\n",
-    "\n",
+    "# Data info about the red texture image\n",
     "print('\\n--- texture2.png data ---')\n",
     "print('Size:', red_texture_img.size)\n",
     "print('Shape:', red_texture_img.shape)\n",
     "print('Data type:', red_texture_img.dtype)\n",
     "print('Pixel 0:', red_texture_img[0, 0])\n",
     "\n",
+    "# Data info about my downloaded image\n",
+    "print('\\n--- my_texture.png data ---')\n",
+    "print('Size:', my_texture_img.size)\n",
+    "print('Shape:', my_texture_img.shape)\n",
+    "print('Data type:', my_texture_img.dtype)\n",
+    "print('Pixel 0:', my_texture_img[0, 0])\n",
+    "\n",
+    "# Dressing the model with the coat\n",
+    "# As we can see with the data obtained, both images are the same size, so we can overlay one over another\n",
+    "# In this case, we'll create a new image, using the model image and the coat image\n",
+    "# The coat image is PNG so its pixels values at the 'empty' part of the image are 0\n",
+    "# What we do is to create a new array that'll be the new image of the model with the coat covering her\n",
+    "# The formula is simple, the image will be constructed with the pixels of the coat image if their value are greater than 0\n",
+    "# if they aren't, then the pixels used to fill the image will be the model image ones\n",
     "coat_model = np.where(coat_img > 0, coat_img, model_img)\n",
+    "\n",
+    "# Data info about the 'model dressed with the coat' image\n",
     "print('\\n--- coat_model data ---')\n",
     "print('Size:', coat_model.size)\n",
     "print('Shape:', coat_model.shape)\n",
     "print('Data type:', coat_model.dtype)\n",
     "print('Pixel 0:', coat_model[0, 0])\n",
     "\n",
-    "red_texture_img_rgba = np.zeros((red_texture_img.shape[0], red_texture_img.shape[1], 4), dtype='uint8')\n",
+    "# The red texture image is RGB type, and not RGBA type, so we can not do the same as before\n",
+    "# So... we need to convert it to RGBA, for that, we create a new array of 0's with the size of the red texture image as RGBA\n",
+    "# We fill the new image (array) with 255 at the alpha and for the red, green and blue we keep the same values of the original texture image\n",
+    "red_texture_img_rgba = np.zeros((red_texture_img.shape[0], red_texture_img.shape[1], 4), dtype='uint8') # We keep the data type as uint8\n",
     "red_texture_img_rgba = red_texture_img_rgba + 255\n",
     "red_texture_img_rgba[:,:,:-1] = red_texture_img\n",
     "\n",
+    "# Data info about the red texture image as RGBA\n",
     "print('\\n--- red_texture_img_rgba data ---')\n",
     "print('Size:', red_texture_img_rgba.size)\n",
     "print('Shape:', red_texture_img_rgba.shape)\n",
     "print('Data type:', red_texture_img_rgba.dtype)\n",
     "print('Pixel 0:', red_texture_img_rgba[0, 0])\n",
     "\n",
+    "# We do the same as we did before when covering the model with the yellow coat\n",
+    "# We create a new image (array) filled with the red texture rgba image pixels if in that coordinates the coat image value is greater than 0\n",
+    "# if not then, fill with the model image pixels\n",
+    "# We are basicly doing the same as before, but not filling pixels with the coat image values, just use the image pixels as a reference\n",
     "red_coat_model = np.where(coat_img > 0, red_texture_img_rgba, model_img)\n",
+    "\n",
+    "# Data info about the 'model dressed with the coat with red texture' image\n",
     "print('\\n--- red_coat_model data ---')\n",
     "print('Size:', red_coat_model.size)\n",
     "print('Shape:', red_coat_model.shape)\n",
     "print('Data type:', red_coat_model.dtype)\n",
     "print('Pixel 0:', red_coat_model[0, 0])\n",
     "\n",
-    "\n",
-    "my_texture_img_resized = img_as_uint(resize(my_texture_img, (model_img.shape[0], model_img.shape[1]), anti_aliasing=True))\n",
+    "# We are using resize to give the downloaded texture the same size as the model image, we use anti_aliasing set to False\n",
+    "# because we don't want to smooth the image\n",
+    "# Then we do the same we did before with the red_texture_img to give it an alpha channel to the image\n",
+    "my_texture_img_resized = img_as_uint(resize(my_texture_img, (model_img.shape[0], model_img.shape[1]), anti_aliasing=False))\n",
     "my_texture_img_resized_rgba = np.zeros((my_texture_img_resized.shape[0], my_texture_img_resized.shape[1], 4), dtype='uint8')\n",
     "my_texture_img_resized_rgba = my_texture_img_resized_rgba + 255\n",
     "my_texture_img_resized_rgba[:,:,:-1] = my_texture_img_resized\n",
     "\n",
+    "# And now, we can create the new image of the model dressed with the texturized coat (our downloaded texture)\n",
+    "# We do the same as we did to create the red_coat_model, using coat image values and coordinates to fill the new image (array) \n",
+    "# wether the downloaded texture if pixel value is greater than 0, if not then model image pixel\n",
     "my_texture_coat_model = np.where(coat_img > 0, my_texture_img_resized_rgba, model_img)\n",
     "\n",
+    "# Data info about the 'model dressed with the coat with my downloaded texture' image\n",
+    "print('\\n--- my_texture_coat_model data ---')\n",
+    "print('Size:', my_texture_coat_model.size)\n",
+    "print('Shape:', my_texture_coat_model.shape)\n",
+    "print('Data type:', my_texture_coat_model.dtype)\n",
+    "print('Pixel 0:', my_texture_coat_model[0, 0])\n",
+    "\n",
+    "# Displaying all the images\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "fig.add_subplot(2, 2, 1)\n",
     "plt.imshow(model_img)\n",
@@ -1597,7 +1640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
