--- a/p5/P5_LaurentiuNedelcu_IanCarlos.ipynb
+++ b/p5/P5_LaurentiuNedelcu_IanCarlos.ipynb
@@ -80,6 +80,7 @@
     "from skimage import io\n",
     "import os\n",
     "from skimage.transform import resize\n",
+    "from scipy.ndimage import convolve\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
@@ -243,9 +244,28 @@
    "source": [
     "def visualize_features(im,  filter_bank, n_filters=5):\n",
     "    fig, ax = plt.subplots(ncols=n_filters, nrows=2, figsize=(15,6))\n",
-    "    # complete this function\n",
+    "    \n",
+    "    # Iterating over n_filters\n",
+    "    for k in range(n_filters):\n",
+    "        # Creating the new image that will save the convolved im image\n",
+    "        filtered_img = np.zeros(im.shape)\n",
+    "        \n",
+    "        # Convolve the im image with the k'th filter in the filter_bank\n",
+    "        # and save the result in the filtered_img\n",
+    "        # Remember to absolutize the filtered_img \n",
+    "        convolve(im, filter_bank[:, :, k], output=filtered_img)\n",
+    "        filtered_img = np.abs(filtered_img)\n",
+    "        \n",
+    "        # Plot the filtered_img and the k'th filter in the filter_bank\n",
+    "        ax[0, k].imshow(filtered_img, cmap = 'gray')\n",
+    "        ax[0, k].axis('off')\n",
+    "        ax[1, k].imshow(filter_bank[:, :, k], cmap = 'gray')\n",
+    "        ax[1, k].axis('off')\n",
+    "    \n",
+    "    # Show it all\n",
+    "    plt.show()\n",
     "\n",
-    "visualize_features(im, filter_bank)\n"
+    "visualize_features(im, filter_bank)"
    ]
   },
   {
@@ -351,7 +371,7 @@
     "    return None\n",
     "\n",
     "visualize_features(25, all_feature_vectors)    \n",
-    "visualize_features(41, all_feature_vectors)    "
+    "visualize_features(41, all_feature_vectors)"
    ]
   },
   {
@@ -418,10 +438,9 @@
     "    #Complete\n",
     "    distances = None\n",
     "    closest_to_query = None\n",
-    "    closest_images =None\n",
+    "    closest_images = None    \n",
     "    \n",
-    "    return closest_images, distances\n",
-    "\n"
+    "    return closest_images, distances"
    ]
   },
   {
@@ -578,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
