--- a/p5/P5_LaurentiuNedelcu_IanCarlos.ipynb
+++ b/p5/P5_LaurentiuNedelcu_IanCarlos.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -151,7 +151,7 @@
        "(30, 30, 30)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,26 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LM filters imported, the shape of the filter bank is:  (49, 49, 48)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import LM_filters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -212,7 +204,7 @@
        "(49, 49, 48)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -287,10 +279,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2acb9dcb208>"
+       "<matplotlib.image.AxesImage at 0x27cc2da02c8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -315,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -337,9 +329,9 @@
     "def visualize_features(im,  filter_bank, n_filters=5):\n",
     "    fig, ax = plt.subplots(ncols=n_filters, nrows=2, figsize=(15,6))\n",
     "    \n",
-    "    # Iterating over n_filters\n",
+    "    # Iterate over the n_filters value\n",
     "    for k in range(n_filters):\n",
-    "        # Creating the new image that will save the convolved im image\n",
+    "        # Create the new image that will save the convolved im image\n",
     "        filtered_img = np.zeros(im.shape)\n",
     "        \n",
     "        # Convolve the im image with the k'th filter in the filter_bank\n",
@@ -357,6 +349,7 @@
     "    # Show it all\n",
     "    plt.show()\n",
     "\n",
+    "# Call the function\n",
     "visualize_features(im, filter_bank)"
    ]
   },
@@ -378,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -387,12 +380,26 @@
     "im = skimage.color.rgb2gray(pizza_images[0])\n",
     "\n",
     "def features_from_filter_bank(image, filter_bank, n_filters):\n",
-    "    ## Complete this function\n",
+    "    # Create the new image that will save the convolved image\n",
+    "    # Create the array that will save the data for each feature (the mean of the convolved image) \n",
     "    im_conv = np.zeros(image.shape)\n",
     "    features_for_im = np.zeros(n_filters)\n",
-    "  \n",
+    "    \n",
+    "    # Iterate over the n_filters value\n",
+    "    for k in range(n_filters):\n",
+    "        \n",
+    "        # Convolve the image with the k'th filter in the filter_bank,\n",
+    "        # save the result in the im_conv image and, save the mean of it\n",
+    "        # in the features_for_im array at its k'th position\n",
+    "        # Remember to absolutize the im_conv image \n",
+    "        convolve(image, filter_bank[:, :, k], output=im_conv)\n",
+    "        im_conv = np.abs(im_conv)\n",
+    "        features_for_im[k] = np.mean(im_conv)\n",
+    "        \n",
+    "    # Finally return the feature vector\n",
     "    return features_for_im\n",
     "\n",
+    "# Call the function\n",
     "features_for_im = features_from_filter_bank(im, filter_bank, n_filters)"
    ]
   },
