--- a/p6/Laboratory 6/p6.ipynb
+++ b/p6/Laboratory 6/p6.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7faea250daf0>"
+       "<matplotlib.image.AxesImage at 0x7faea0765a30>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "12.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "32.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,17 @@
     "                ########################\n",
     "                ### FILL IN HERE\n",
     "                ########################\n",
-    "                pass # remove this pass\n",
+    "                \n",
+    "                # Calculating the range of width and height we have to consider\n",
+    "                w = img_width - feature_width\n",
+    "                h = img_height - feature_height\n",
+    "                \n",
+    "                for i in range(w - 1):\n",
+    "                    for j in range(h - 1):\n",
+    "                        \n",
+    "                        # Getting the HaarLikeFeature object with both polarities (pos & neg), the threshold is set to 0\n",
+    "                        features.append(HaarLikeFeature(feature, (i,j), feature_width, feature_height, 0, -1))\n",
+    "                        features.append(HaarLikeFeature(feature, (i,j), feature_width, feature_height, 0, 1))\n",
     "            \n",
     "    print('\\t' + str(len(features)) + ' features created.')\n",
     "    print('\\tTime needed for calculating Harr-like features:', time.time()-t0)\n",
@@ -626,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,12 +649,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Haar-like features..\n",
+      "\t2090 features created.\n",
+      "\tTime needed for calculating Harr-like features: 0.0030629634857177734\n",
+      "Calculating scores for images..\n",
+      "\tTime needed for calculating scores: 1.3012878894805908\n",
+      "Selecting classifiers..\n",
+      "\tTime needed for Selecting Classifiers: 0.2356574535369873 \n",
+      "\n",
+      "CPU times: user 1.18 s, sys: 115 ms, total: 1.3 s\n",
+      "Wall time: 1.68 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
-    "#classifiers = learn(...)"
+    "#classifiers = learn(...)\n",
+    "\n",
+    "# Get Training dataset\n",
+    "faces_train = load_images(pos_training_path)\n",
+    "no_faces_train = load_images(neg_training_path)\n",
+    "\n",
+    "# Get Testing dataset\n",
+    "faces_test = load_images(pos_testing_path)\n",
+    "no_faces_test = load_images(neg_testing_path)\n",
+    "\n",
+    "# Building the list of classifiers\n",
+    "classifiers = learn(faces_train, no_faces_train, num_classifiers, min_feature_width, max_feature_width,\n",
+    "                    min_feature_height, max_feature_height)"
    ]
   },
   {
@@ -677,23 +716,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ensemble_vote(int_img, classifiers):\n",
-    "    return"
+    "    \n",
+    "    if len(classifiers) > 0:\n",
+    "        \n",
+    "        # Get all the positive results\n",
+    "        pos = [feat for feat in classifiers if feat.get_vote(int_img) > 0]\n",
+    "        \n",
+    "        # Comprove if the majority of the votes are positive\n",
+    "        if np.float(len(pos)/len(classifiers)) > 0.5:\n",
+    "            return 1\n",
+    "        \n",
+    "    return 0\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution 1\n",
     "def ensemble_vote_all(int_imgs, classifiers):\n",
-    "    return\n"
+    "    \n",
+    "    # Get if the majority of the votes are positive for each image\n",
+    "    return [ensemble_vote(img, classifiers) for img in int_imgs]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_results(faces_trained, faces_not_trained, faces_tested, faces_not_tested, classifiers):\n",
+    "    \n",
+    "    total_faces = len(faces_trained)\n",
+    "    total_no_faces = len(faces_not_trained)\n",
+    "    \n",
+    "    n_ft = np.sum(ensemble_vote_all(faces_train, classifiers))\n",
+    "    n_fnt = total_no_faces - np.sum(ensemble_vote_all(faces_not_trained, classifiers))\n",
+    "    \n",
+    "    pct_f = n_ft / total_faces * 100\n",
+    "    pct_nf = n_fnt / total_no_faces * 100\n",
+    "    \n",
+    "    print('train results')\n",
+    "    print('Correctly identified Faces: ' + str(n_ft) + '/' + str(total_faces) + '(' + str(pct_f) + '%)')\n",
+    "    print('Correctly identified non-Faces: ' + str(n_fnt) + '/' + str(total_no_faces) + '(' + str(pct_nf) + '%)')\n",
+    "    \n",
+    "    total_faces = len(faces_tested)\n",
+    "    total_no_faces = len(faces_not_tested)\n",
+    "    \n",
+    "    n_ft = np.sum(ensemble_vote_all(faces_tested, classifiers))\n",
+    "    n_fnt = total_no_faces - np.sum(ensemble_vote_all(faces_not_tested, classifiers))\n",
+    "    \n",
+    "    pct_f = n_ft / total_faces * 100\n",
+    "    pct_nf = n_fnt / total_no_faces * 100\n",
+    "    \n",
+    "    \n",
+    "    print('train results')\n",
+    "    print('Correctly identified Faces: ' + str(n_ft) + '/' + str(total_faces) + '(' + str(pct_f) + '%)')\n",
+    "    print('Correctly identified non-Faces: ' + str(n_fnt) + '/' + str(total_no_faces) + '(' + str(pct_nf) + '%)')"
    ]
   },
   {
@@ -721,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,6 +818,57 @@
     "max_feature_height = 10\n",
     "min_feature_width = 8\n",
     "max_feature_width = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Haar-like features..\n",
+      "\t2090 features created.\n",
+      "\tTime needed for calculating Harr-like features: 0.006546735763549805\n",
+      "Calculating scores for images..\n",
+      "\tTime needed for calculating scores: 1.2594425678253174\n",
+      "Selecting classifiers..\n",
+      "\tTime needed for Selecting Classifiers: 2.419506311416626 \n",
+      "\n",
+      "CPU times: user 3.27 s, sys: 69.2 ms, total: 3.34 s\n",
+      "Wall time: 3.69 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "classifiers2 = learn(faces_train, no_faces_train, num_classifiers, min_feature_width, max_feature_width, min_feature_height, max_feature_height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 19/30(63.33333333333333%)\n",
+      "Correctly identified non-Faces: 16/20(80.0%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print results\n",
+    "print_results(faces_train, no_faces_train, faces_test, no_faces_test, classifiers2)"
    ]
   },
   {
@@ -770,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,23 +930,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ensemble_score(int_img, classifiers):\n",
     "    return sum([c.get_vote(int_img) for c in classifiers])\n",
     "\n",
-    "def ensemble_vote_t(int_img, classifiers,t):\n",
-    "    return 1 if #your solution here\n",
+    "def ensemble_vote_t(int_img, classifiers, t):\n",
+    "    return 1 if ensemble_score(int_img, classifiers) > t else 0\n",
     "\n",
-    "def ensemble_vote_all_t(int_imgs, classifiers,t=-0.1):\n",
-    "    votes = []\n",
+    "def ensemble_vote_all_t(int_imgs, classifiers, t=-0.1):\n",
+    "\n",
     "    #your solution here\n",
+    "    votes = [ensemble_vote_t(int_img, classifiers, t) for int_img in int_imgs]\n",
     "    \n",
     "    return votes\n",
     "\n",
     "#showing the plot of the score according to the threshold for faces and non-faces of the test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_results_threshold(faces_trained, faces_not_trained, faces_tested, faces_not_tested, classifiers, threshold):\n",
+    "    \n",
+    "    total_faces = len(faces_trained)\n",
+    "    total_no_faces = len(faces_not_trained)\n",
+    "    \n",
+    "    n_ft = np.sum(ensemble_vote_all_t(faces_train, classifiers, threshold))\n",
+    "    n_fnt = total_no_faces - np.sum(ensemble_vote_all_t(faces_not_trained, classifiers, threshold))\n",
+    "    \n",
+    "    pct_f = n_ft / total_faces * 100\n",
+    "    pct_nf = n_fnt / total_no_faces * 100\n",
+    "    \n",
+    "    print('train results')\n",
+    "    print('Correctly identified Faces: ' + str(n_ft) + '/' + str(total_faces) + '(' + str(pct_f) + '%)')\n",
+    "    print('Correctly identified non-Faces: ' + str(n_fnt) + '/' + str(total_no_faces) + '(' + str(pct_nf) + '%)')\n",
+    "    \n",
+    "    total_faces = len(faces_tested)\n",
+    "    total_no_faces = len(faces_not_tested)\n",
+    "    \n",
+    "    n_ft = np.sum(ensemble_vote_all_t(faces_tested, classifiers, threshold))\n",
+    "    n_fnt = total_no_faces - np.sum(ensemble_vote_all_t(faces_not_tested, classifiers, threshold))\n",
+    "    \n",
+    "    pct_f_th = n_ft / total_faces * 100\n",
+    "    pct_nf_th = n_fnt / total_no_faces * 100\n",
+    "    \n",
+    "    \n",
+    "    print('train results')\n",
+    "    print('Correctly identified Faces: ' + str(n_ft) + '/' + str(total_faces) + '(' + str(pct_f_th) + '%)')\n",
+    "    print('Correctly identified non-Faces: ' + str(n_fnt) + '/' + str(total_no_faces) + '(' + str(pct_nf_th) + '%)')\n",
+    "    \n",
+    "    return pct_f, pct_nf, pct_f_th, pct_nf_th"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Threshold: -0.5\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 24/30(80.0%)\n",
+      "Correctly identified non-Faces: 10/20(50.0%)\n",
+      "\n",
+      "Threshold: -0.4\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 24/30(80.0%)\n",
+      "Correctly identified non-Faces: 10/20(50.0%)\n",
+      "\n",
+      "Threshold: -0.3\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 23/30(76.66666666666667%)\n",
+      "Correctly identified non-Faces: 11/20(55.00000000000001%)\n",
+      "\n",
+      "Threshold: -0.2\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 21/30(70.0%)\n",
+      "Correctly identified non-Faces: 13/20(65.0%)\n",
+      "\n",
+      "Threshold: -0.1\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 21/30(70.0%)\n",
+      "Correctly identified non-Faces: 14/20(70.0%)\n",
+      "\n",
+      "Threshold: 0.0\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 21/30(70.0%)\n",
+      "Correctly identified non-Faces: 15/20(75.0%)\n",
+      "\n",
+      "Threshold: 0.1\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 21/30(70.0%)\n",
+      "Correctly identified non-Faces: 15/20(75.0%)\n",
+      "\n",
+      "Threshold: 0.2\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 21/30(70.0%)\n",
+      "Correctly identified non-Faces: 15/20(75.0%)\n",
+      "\n",
+      "Threshold: 0.3\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 20/30(66.66666666666666%)\n",
+      "Correctly identified non-Faces: 15/20(75.0%)\n",
+      "\n",
+      "Threshold: 0.4\n",
+      "train results\n",
+      "Correctly identified Faces: 39/39(100.0%)\n",
+      "Correctly identified non-Faces: 29/29(100.0%)\n",
+      "train results\n",
+      "Correctly identified Faces: 20/30(66.66666666666666%)\n",
+      "Correctly identified non-Faces: 15/20(75.0%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for threshold in thresholds:\n",
+    "    print(\"\\nThreshold:\", threshold)\n",
+    "    ftrain, nftrain, ftest, nftest = print_results_threshold(faces_train, no_faces_train, faces_test,\n",
+    "                                                             no_faces_test, classifiers2, threshold)\n",
+    "    \n",
+    "    #Append the results in order to plot'em later\n",
+    "    correct_faces_train_t.append(ftrain)\n",
+    "    correct_non_faces_train_t.append(nftrain)\n",
+    "    correct_faces_test_t.append(ftest)\n",
+    "    correct_non_faces_test_t.append(nftest)"
    ]
   },
   {
